# Thyroid_Cancer_Detection_xai

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  streamlit_app.py
backend/: routes.py
frontend/static/: app.js  style.css
frontend/templates/: index.html
utils/: config.py  gradcam.py  logger.py  model_architecture.py  processing.py  report_generator.py
